@@ -1,3 +1,11 @@
+2018-04-11  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-1022
+
+	* src/absorption.cc (xsec_species):
+
+	Only generate extra info output if it will be visible.
+
 2018-04-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-1021
